tests/ui/scalable-vectors/illformed-tuples-of-scalable-vectors.stderr
error: scalable vectors must be tuple structs
  --> $DIR/illformed-tuples-of-scalable-vectors.rs:16:1
   |
LL | struct Struct { x: ValidI64, y: ValidI64 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: all fields in a scalable vector struct must be the same type
  --> $DIR/illformed-tuples-of-scalable-vectors.rs:20:39
   |
LL | struct DifferentVectorTypes(ValidI64, ValidI32);
   |                                       ^^^^^^^^

error: scalable vector structs can only have scalable vector fields
  --> $DIR/illformed-tuples-of-scalable-vectors.rs:24:23
   |
LL | struct NonVectorTypes(u32, u64);
   |                       ^^^

error: scalable vector structs can only have scalable vector fields
  --> $DIR/illformed-tuples-of-scalable-vectors.rs:28:32
   |
LL | struct DifferentNonVectorTypes(u32, u64);
   |                                ^^^

error: scalable vector structs can only have scalable vector fields
  --> $DIR/illformed-tuples-of-scalable-vectors.rs:32:34
   |
LL | struct SomeVectorTypes(ValidI64, u64);
   |                                  ^^^

error: scalable vector structs cannot contain other scalable vector structs
  --> $DIR/illformed-tuples-of-scalable-vectors.rs:36:20
   |
LL | struct NestedTuple(ValidTuple, ValidTuple);
   |                    ^^^^^^^^^^

error: aborting due to 6 previous errors

